[gd_scene load_steps=3 format=3 uid="uid://cutscene_intro"]

[ext_resource type="Script" path="res://scripts/cutscenes/IntroCutscene.gd" id="1_intro"]

[sub_resource type="Gradient" id="Gradient_rain"]
colors = PackedColorArray(0.6, 0.7, 0.9, 0.8, 0.4, 0.5, 0.7, 0.0)

[node name="IntroCutscene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_intro")

[node name="Sky" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.15, 1)

[node name="LightningFlash" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 0.95, 0.8)

[node name="CloudLayer" type="Node2D" parent="."]
position = Vector2(213, 30)

[node name="Cloud1" type="ColorRect" parent="CloudLayer"]
offset_left = -180.0
offset_top = -20.0
offset_right = -80.0
offset_bottom = 20.0
color = Color(0.15, 0.15, 0.25, 1)

[node name="Cloud2" type="ColorRect" parent="CloudLayer"]
offset_left = -50.0
offset_top = -25.0
offset_right = 80.0
offset_bottom = 25.0
color = Color(0.12, 0.12, 0.22, 1)

[node name="Cloud3" type="ColorRect" parent="CloudLayer"]
offset_left = 100.0
offset_top = -15.0
offset_right = 220.0
offset_bottom = 20.0
color = Color(0.14, 0.14, 0.24, 1)

[node name="Cloud4" type="ColorRect" parent="CloudLayer"]
offset_left = -120.0
offset_top = 10.0
offset_right = 20.0
offset_bottom = 40.0
color = Color(0.1, 0.1, 0.2, 1)

[node name="Ocean" type="Node2D" parent="."]
position = Vector2(0, 120)

[node name="DeepWater" type="ColorRect" parent="Ocean"]
offset_right = 426.0
offset_bottom = 120.0
color = Color(0.08, 0.15, 0.25, 1)

[node name="Wave1" type="ColorRect" parent="Ocean"]
offset_top = -8.0
offset_right = 426.0
offset_bottom = 0.0
color = Color(0.12, 0.22, 0.35, 1)

[node name="Wave2" type="ColorRect" parent="Ocean"]
offset_top = 20.0
offset_right = 426.0
offset_bottom = 28.0
color = Color(0.1, 0.2, 0.32, 1)

[node name="Wave3" type="ColorRect" parent="Ocean"]
offset_top = 50.0
offset_right = 426.0
offset_bottom = 58.0
color = Color(0.09, 0.18, 0.3, 1)

[node name="Foam1" type="ColorRect" parent="Ocean"]
offset_left = 50.0
offset_top = -5.0
offset_right = 120.0
offset_bottom = -2.0
color = Color(0.5, 0.6, 0.7, 0.6)

[node name="Foam2" type="ColorRect" parent="Ocean"]
offset_left = 200.0
offset_top = 22.0
offset_right = 280.0
offset_bottom = 25.0
color = Color(0.5, 0.6, 0.7, 0.5)

[node name="Foam3" type="ColorRect" parent="Ocean"]
offset_left = 320.0
offset_top = -3.0
offset_right = 400.0
offset_bottom = 0.0
color = Color(0.5, 0.6, 0.7, 0.6)

[node name="Raft" type="Node2D" parent="."]
position = Vector2(213, 145)

[node name="RaftBase" type="ColorRect" parent="Raft"]
offset_left = -35.0
offset_top = -5.0
offset_right = 35.0
offset_bottom = 12.0
color = Color(0.4, 0.28, 0.15, 1)

[node name="Log1" type="ColorRect" parent="Raft"]
offset_left = -32.0
offset_top = -3.0
offset_right = 32.0
offset_bottom = 3.0
color = Color(0.45, 0.32, 0.18, 1)

[node name="Log2" type="ColorRect" parent="Raft"]
offset_left = -30.0
offset_top = 4.0
offset_right = 30.0
offset_bottom = 10.0
color = Color(0.42, 0.3, 0.16, 1)

[node name="Rope1" type="ColorRect" parent="Raft"]
offset_left = -20.0
offset_top = -4.0
offset_right = -18.0
offset_bottom = 11.0
color = Color(0.55, 0.45, 0.3, 1)

[node name="Rope2" type="ColorRect" parent="Raft"]
offset_left = 18.0
offset_top = -4.0
offset_right = 20.0
offset_bottom = 11.0
color = Color(0.55, 0.45, 0.3, 1)

[node name="Box" type="Node2D" parent="Raft"]
position = Vector2(0, -12)

[node name="BoxBack" type="ColorRect" parent="Raft/Box"]
offset_left = -18.0
offset_top = -12.0
offset_right = 18.0
offset_bottom = 8.0
color = Color(0.45, 0.32, 0.2, 1)

[node name="BoxFront" type="ColorRect" parent="Raft/Box"]
offset_left = -16.0
offset_top = -10.0
offset_right = 16.0
offset_bottom = 6.0
color = Color(0.55, 0.4, 0.25, 1)

[node name="BoxFlap1" type="ColorRect" parent="Raft/Box"]
offset_left = -16.0
offset_top = -14.0
offset_right = -2.0
offset_bottom = -10.0
color = Color(0.5, 0.36, 0.22, 1)

[node name="BoxFlap2" type="ColorRect" parent="Raft/Box"]
offset_left = 2.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = -10.0
color = Color(0.52, 0.38, 0.24, 1)

[node name="Charlie" type="Node2D" parent="Raft/Box"]
position = Vector2(0, -4)

[node name="Body" type="ColorRect" parent="Raft/Box/Charlie"]
offset_left = -8.0
offset_top = -6.0
offset_right = 8.0
offset_bottom = 6.0
color = Color(0.95, 0.92, 0.88, 1)

[node name="Head" type="ColorRect" parent="Raft/Box/Charlie"]
offset_left = -6.0
offset_top = -12.0
offset_right = 6.0
offset_bottom = -4.0
color = Color(0.97, 0.94, 0.9, 1)

[node name="EarL" type="ColorRect" parent="Raft/Box/Charlie"]
offset_left = -8.0
offset_top = -10.0
offset_right = -5.0
offset_bottom = -4.0
color = Color(0.9, 0.85, 0.8, 1)

[node name="EarR" type="ColorRect" parent="Raft/Box/Charlie"]
offset_left = 5.0
offset_top = -10.0
offset_right = 8.0
offset_bottom = -4.0
color = Color(0.9, 0.85, 0.8, 1)

[node name="Nose" type="ColorRect" parent="Raft/Box/Charlie"]
offset_left = -2.0
offset_top = -8.0
offset_right = 2.0
offset_bottom = -5.0
color = Color(0.15, 0.1, 0.1, 1)

[node name="EyeL" type="ColorRect" parent="Raft/Box/Charlie"]
offset_left = -4.0
offset_top = -11.0
offset_right = -2.0
offset_bottom = -9.0
color = Color(0.1, 0.08, 0.08, 1)

[node name="EyeR" type="ColorRect" parent="Raft/Box/Charlie"]
offset_left = 2.0
offset_top = -11.0
offset_right = 4.0
offset_bottom = -9.0
color = Color(0.1, 0.08, 0.08, 1)

[node name="RainHeavy" type="CPUParticles2D" parent="."]
position = Vector2(213, -20)
emitting = true
amount = 300
lifetime = 0.8
speed_scale = 2.0
local_coords = false
emission_shape = 3
emission_rect_extents = Vector2(250, 10)
direction = Vector2(0.3, 1)
spread = 8.0
gravity = Vector2(100, 800)
initial_velocity_min = 200.0
initial_velocity_max = 350.0
scale_amount_min = 0.5
scale_amount_max = 2.0
color = Color(0.6, 0.7, 0.85, 0.7)

[node name="RainLight" type="CPUParticles2D" parent="."]
position = Vector2(213, -20)
emitting = true
amount = 150
lifetime = 1.0
speed_scale = 1.5
local_coords = false
emission_shape = 3
emission_rect_extents = Vector2(250, 10)
direction = Vector2(0.2, 1)
spread = 5.0
gravity = Vector2(50, 600)
initial_velocity_min = 150.0
initial_velocity_max = 250.0
scale_amount_min = 0.3
scale_amount_max = 1.0
color = Color(0.5, 0.6, 0.75, 0.5)

[node name="SprayParticles" type="CPUParticles2D" parent="."]
position = Vector2(213, 130)
emitting = true
amount = 50
lifetime = 0.6
local_coords = false
emission_shape = 3
emission_rect_extents = Vector2(200, 5)
direction = Vector2(0, -1)
spread = 45.0
gravity = Vector2(0, 200)
initial_velocity_min = 30.0
initial_velocity_max = 80.0
scale_amount_min = 0.5
scale_amount_max = 1.5
color = Color(0.5, 0.6, 0.75, 0.4)

[node name="WindLines" type="Node2D" parent="."]

[node name="Wind1" type="ColorRect" parent="WindLines"]
offset_left = 20.0
offset_top = 60.0
offset_right = 80.0
offset_bottom = 62.0
color = Color(0.5, 0.6, 0.7, 0.3)

[node name="Wind2" type="ColorRect" parent="WindLines"]
offset_left = 150.0
offset_top = 90.0
offset_right = 230.0
offset_bottom = 91.0
color = Color(0.5, 0.6, 0.7, 0.25)

[node name="Wind3" type="ColorRect" parent="WindLines"]
offset_left = 280.0
offset_top = 45.0
offset_right = 380.0
offset_bottom = 46.0
color = Color(0.5, 0.6, 0.7, 0.35)

[node name="Wind4" type="ColorRect" parent="WindLines"]
offset_left = 100.0
offset_top = 140.0
offset_right = 180.0
offset_bottom = 141.0
color = Color(0.5, 0.6, 0.7, 0.2)

[node name="ScreenShake" type="Node2D" parent="."]

[node name="NarrationPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -50.0
offset_right = -20.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0

[node name="NarrationLabel" type="Label" parent="NarrationPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 5.0
offset_right = -10.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 11
text = "In the midst of a terrible storm..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="SkipButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 25.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 10
text = "Skip >>"

[node name="ShakeTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="LightningTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="pressed" from="SkipButton" to="." method="_on_skip_pressed"]
[connection signal="timeout" from="ShakeTimer" to="." method="_on_shake_timer_timeout"]
[connection signal="timeout" from="LightningTimer" to="." method="_on_lightning_timer_timeout"]
[connection signal="timeout" from="WaveTimer" to="." method="_on_wave_timer_timeout"]
